# Web-Scraping-PyData

./: .gitignore  README.md  environment.yml  steps.txt
Presentation/: index.html  package-lock.json
Presentation/images/: Stine.xcf
Presentation/js/: reveal.min.js
examples/: bilbase.py  bilbase_api.py  bolig_network.py  boliga_api.py  boliga_progress_bar.py
examples/Bolighed/: .gitignore  README.md  bolighed.py  pyproject.toml
examples/advance/: bolig.py  boliga.py  example.py  home.py
examples/beyond_python/: README.md  boliga..lua  boliga.py
examples/web_automation/: __init__.py  basic_selenium.py  linkedin_extended.ipynb  linkedin_prototype-Copy1.ipynb  linkedin_prototype.ipynb  linkedin_selenium.py  selenium_notes.txt
examples/web_automation/notebooks/: linkedin_extended.ipynb  linkedin_prototype.ipynb  pagination_linkedin.ipynb  pagnination_linkedin.ipynb  run_before_notes.py  testing_linkedin_selenium.ipynb
examples/web_automation/utils/: helpers.py
notebooks/: 1demo_start.ipynb  2demo_start_ennd.ipynb  3demo_tables.ipynb  4demo_pricerunner.ipynb  5demo_anmeldelser.ipynb  6demo_last_kino.ipynb  BoligClass.ipynb  Michael.ipynb  PDF.ipynb  basics.ipynb  bilbase.py  biltorvet.ipynb  proxies.ipynb  speeches.ipynb  trustpilot_discovering.ipynb
