[tool.poetry]
name = "bolighed"
version = "0.1.5"
description = "Get Bolig Data From Bolighed.dk"
authors = ["Prayson Wilfred Daniel"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.23.4"
requests = "^2.21"
loguru = "^0.2.5"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
